Code Cleanup + add img to details
Code Cleanup
add img to details
update readme
remove dependencies

--- a/src/app/component/api-table-details/api-table-details.component.css
+++ b/src/app/component/api-table-details/api-table-details.component.css
@@ -10,3 +10,7 @@
     color: #3f51b5;
     border: 2px solid #3f51b5;
 }
+
+.img-bg {
+    background-image: linear-gradient(to right top, #f9951b, #fba541, #fdb460, #fec37e, #ffd29c);
+}
