--- a/src/app/component/api-table-details/api-table-details.component.html
+++ b/src/app/component/api-table-details/api-table-details.component.html
@@ -3,7 +3,10 @@
   <div class="col-sm-12">
     <div class="card"> 
       <div class="row no-gutters">
-        <div class="col-md-12">
+        <div class="col-md-2 img-bg">
+          <img src="{{ data.row.owner.avatar_url}}" height="249" width="249">         
+        </div>
+        <div class="col-md-10">          
           <div class="card-body">
             <h5 class="card-title">Repository Details</h5>
             <p class="card-text"><strong>{{ data.row.full_name | json }}</strong></p>
@@ -15,7 +18,7 @@
             <p class="card-text">Watchers:  <strong>{{ data.row.watchers | json }}</strong></p>
             <p class="card-text">Is Private:  <strong>{{ data.row.private | json }}</strong></p>
             <hr>
-            <p class="card-text">URL:  <strong><a href="{{ data.row.html_url | json }}">{{ data.row.html_url | json }}</a></strong> </p>
+            <p class="card-text">URL: <strong>{{ data.row.url | json }}</strong></p>
           </div>
         </div>
       </div>
